--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "bagree-diagnostic-centre",
   "version": "1.0.0",
-  "scripts": { "dev": "vite", "build": "vite build", "preview": "vite preview" },
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.3",
+    "@supabase/supabase-js": "^2.39.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "devDependencies": { "vite": "^5.0.0" }
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.11",
+    "vite": "^5.0.12"
+  }
 }
